[package]
name = "simple_volatility"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["guest", "swap"]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }
guest = { path = "./guest" }
swap = { path = "./swap" }
csv = "1.3.0"
serde = { version = "1.0.202", default-features = false }
alloy-primitives = { version = "0.7.4", features = ["serde"], default-features = false }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
