[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
fixed = "1.27.0"
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
serde = { version = "1.0.202", default-features = false, features = ["derive", "alloc"] }
